--- a/.github/workflows/merge_modify_m3u.yml
+++ b/.github/workflows/merge_modify_m3u.yml
@@ -2,7 +2,7 @@ name: Merge, Modify, and Add Logos to M3U Files
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天运行一次
+    - cron: '0 0 * * 1'  # 每周运行一次
   workflow_dispatch:  # 允许手动触发
   push:
     branches:
